Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h


typedef struct odbad {
    short   datano ;    
    short   type ;      
    char    data ;      
} ODBAD ;
typedef struct odbad {
    short   datano ;    
    short   type ;      
    short   data ;      
} ODBAD ;
typedef struct msg {
    short datano ;     
    short type ;       
    short char_num ;   
    char  data[129] ;  
} OPMSG ;               
typedef struct msg {
    short   datano ;    
    short   type ;      
    short   char_num ;  
    char    data[256] ; 
} OPMSG ;   
typedef struct opmsg3 {
    short   datano ;    
    short   type ;      
    short   char_num ;  
    char    data[256] ; 
} OPMSG3 ;   
typedef struct odbprs {
    short   datano;         
    short   type;           
    short   data_info[5];   
    long    rstr_bc;        
    long    rstr_m[35];     
    long    rstr_t[2];      
    long    rstr_s;         
    long    rstr_b;         
    long    dest[MAX_AXIS]; 
    long    dist[MAX_AXIS]; 
} ODBPRS;
typedef struct iodbsgnl {
    short   datano;     
    short   type;       
    short   mode;       
    short   hndl_ax;    
    short   hndl_mv;    
    short   rpd_ovrd;   
    short   jog_ovrd;   
    short   feed_ovrd;  
    short   spdl_ovrd;  
    short   blck_del;   
    short   sngl_blck;  
    short   machn_lock; 
    short   dry_run;    
    short   mem_prtct;  
    short   feed_hold;  
    short   manual_rpd; 
    short   dummy[2];   
} IODBSGNL;
typedef struct iodbsgnl {
    short   datano;     
    short   type;       
    short   mode;       
    short   hndl_ax;    
    short   hndl_mv;    
    short   rpd_ovrd;   
    short   jog_ovrd;   
    short   feed_ovrd;  
    short   spdl_ovrd;  
    short   blck_del;   
    short   sngl_blck;  
    short   machn_lock; 
    short   dry_run;    
    short   mem_prtct;  
    short   feed_hold;  
} IODBSGNL;
typedef struct iodbgnrl {
    short   datano; 
    short   type;   
    char    sgnal;  
} IODBGNRL;
typedef struct iodbrdna {
    short   datano;         
    short   type;           
    char    sgnl1_name[9];  
    char    sgnl2_name[9];  
    char    sgnl3_name[9];  
    char    sgnl4_name[9];  
    char    sgnl5_name[9];  
    char    sgnl6_name[9];  
    char    sgnl7_name[9];  
    char    sgnl8_name[9];  
} IODBRDNA;
typedef struct odberr {
    short   err_no ;
    short   err_dtno ;
} ODBERR ;
typedef struct odbdiagif {
    unsigned short  info_no ;
    short   prev_no ;
    short   next_no ;
    struct {
        short   diag_no ;
        short   diag_type ;
    } info[10] ;    
} ODBDIAGIF ;
typedef struct odbdiagnum {
    unsigned short  diag_min ;
    unsigned short  diag_max ;
    unsigned short  total_no ;
} ODBDIAGNUM ;
typedef struct iodbtimer {
	short	type ;
	short	dummy ;
	union {
		struct {
			short	year ;
			short	month ;
			short	date ;
		} date ;
		struct {
			short	hour ;
			short	minute ;
			short	second ;
		} time ;
	} data ;
} IODBTIMER ;
typedef struct iodbtime {
	long	minute ;
	long	msec ;
} IODBTIME ;
typedef struct odbbrs {
    long dest[MAX_AXIS];
    long dist[MAX_AXIS];
} ODBBRS ;		
typedef struct odbrofs {
    short mode;
    short pln_axes[2];
    long ofsvct[2];
} ODBROFS ;
typedef struct odblofs {
    short mode;
    long ofsvct[MAX_AXIS];
} ODBLOFS ;		
typedef struct odbfix {
    short mode;
    short pln_axes[2];
    short drl_axes;
    long i_pos;
    long r_pos;
    long z_pos;
    long cmd_cnt;
    long act_cnt;
    long cut;
    long shift[2];
} ODBFIX ;
typedef struct odbrot {
    short mode;
    short pln_axes[2];
    long center[2];
    long angle;
} ODBROT ;
typedef struct odb3dcd {
    short mode;
    short dno;
    short cd_axes[3];
    long center[2][3];
    long direct[2][3];
    long angle[2];
} ODB3DCD ;
typedef struct odbmir {
    short mode;
    long mir_flag;
    long mir_pos[MAX_AXIS];
} ODBMIR ;		
typedef struct odbscl {
    short mode;
    long center[MAX_AXIS];
    long magnif[MAX_AXIS];
} ODBSCL ;		
typedef struct odb3dto {
    short mode;
    short ofs_axes[3];
    long ofsvct[3];
} ODB3DTO ;
typedef struct odbpofs {
    short mode;
    long ofsvct[MAX_AXIS];
} ODBPOFS ;		
typedef struct iodbidinf {
	long  id_no;
	short drv_no;
	short acc_element;
	short err_general;
	short err_id_no;
	short err_id_name;
	short err_attr;
	short err_unit;
	short err_min_val;
	short err_max_val;
	short id_name_len;
	short id_name_max;
	char  id_name[60];
	long  attr;
	short unit_len;
	short unit_max;
	char  unit[12];
	long  min_val;
	long  max_val;
} IODBIDINF;
typedef struct odbsrcsst {
	short acc_element;
	short err_general;
	short err_id_no;
	short err_attr;
	short err_op_data;
} ODBSRCSST;
typedef struct odbsrcslyt {
	short spndl[4];
	short servo[8];
	char  axis_name[8];
} ODBSRCSLYT;
typedef struct iodbpmc {
    short   type_a ;    
    short   type_d ;    
    short   datano_s ;  
    short   datano_e ;  
    union {
        char    cdata[5] ;  
        short   idata[5] ;
        long    ldata[5] ;
    } u ;
} IODBPMC ; 
typedef struct odbpmcinf {
    short   datano ;
    struct {
        char    pmc_adr ;
        char    adr_attr ;
        unsigned short  top_num ;
        unsigned short  last_num ;
    } info[64] ;
} ODBPMCINF ;
typedef struct iodbpmccntl {
    short   datano_s ;
    short   dummy ;
    short   datano_e ;
    struct {
        char    tbl_prm ;
        char    data_type ;
        unsigned short  data_size ;
        unsigned short  data_dsp ;
        short   dummy ;
    } info[100] ;
} IODBPMCCNTL ;
typedef struct  odbpmcalm {
    char    almmsg[128] ;    
} ODBPMCALM ;
typedef struct odbpmcerr {
    short   err_no ;
    short   err_dtno ;
} ODBPMCERR ;
typedef struct odbprfcnf {
    char    master_ser[5] ;
    char    master_ver[3] ;
    char    slave_ser[5] ;
    char    slave_ver[3] ;
    char    cntl_ser[5] ;
    char    cntl_ver[3] ;
} ODBPRFCNF ;
typedef struct iodbbusprm {
    char           fdl_add ;
    char           baudrate ;
    unsigned short tsl ;
    unsigned short min_tsdr ;
    unsigned short max_tsdr ;
    unsigned char  tqui ;
    unsigned char  tset ;
    long           ttr ;
    char           gap ;
    char           hsa ;
    char           max_retry ;
    unsigned char  bp_flag ;
    unsigned short min_slv_int ;
    unsigned short poll_tout ;
    unsigned short data_cntl ;
    char           reserve1[6] ;
    char           cls2_name[32] ;
    short          user_dlen ;
    char           user_data[62] ;
    char           reserve2[96] ;
} IODBBUSPRM ;
typedef struct iodbslvprm {
    short          dis_enb ;
    unsigned short ident_no ;
    unsigned char  slv_flag ;
    unsigned char  slv_type ;
    char           reserve1[12] ;
    unsigned char  slv_stat ;
    unsigned char  wd_fact1 ;
    unsigned char  wd_fact2 ;
    unsigned char  min_tsdr ;
    char           reserve2 ;
    unsigned char  grp_ident ;
    short          user_plen ;
    char           user_pdata[32] ;
    short          cnfg_dlen ;
    char           cnfg_data[126] ;
    short          slv_ulen ;
    char           slv_udata[30] ;
    char           reserve3[8] ;
} IODBSLVPRM ;
typedef struct iodbprfadr {
    char           di_size ;
    char           di_type ;
    unsigned short di_addr ;
    short          reserve1;
    char           do_size ;
    char           do_type ;
    unsigned short do_addr ;
    short          reserve2;
    char           dgn_size ;
    char           dgn_type ;
    unsigned short dgn_addr ;
} IODBPRFADR ;
typedef struct iodbslvadr {
    char           slave_no ;
    char           di_size ;
    char           di_type ;
    unsigned short di_addr ;
    char           do_size ;
    char           do_type ;
    unsigned short do_addr ;
    char           reserve[7] ;
} IODBSLVADR ;
typedef struct odbslvst {
    unsigned char  cnfg_stat ;
    unsigned char  prm_stat ;
    char           wdg_stat ;
    unsigned char  live_stat ;
    short          ident_no ;
} ODBSLVST ;
FWLIBAPI short WINAPI cnc_adcnv( unsigned short, short, short, ODBAD * ) ;
FWLIBAPI short WINAPI cnc_rdopmsg( unsigned short, short, short, OPMSG * ) ;
FWLIBAPI short WINAPI cnc_rdopmsg3( unsigned short, short, short *, OPMSG3 * ) ;
FWLIBAPI short WINAPI cnc_allclibhndl( unsigned short * ) ;
FWLIBAPI short WINAPI cnc_freelibhndl( unsigned short ) ;
FWLIBAPI short WINAPI cnc_rdprstrinfo( unsigned short, ODBPRS * ) ;
FWLIBAPI short WINAPI cnc_rdopnlsgnl( unsigned short, short, IODBSGNL * ) ;
FWLIBAPI short WINAPI cnc_wropnlsgnl( unsigned short, IODBSGNL * ) ;
FWLIBAPI short WINAPI cnc_rdopnlgnrl( unsigned short, short, IODBGNRL * ) ;
FWLIBAPI short WINAPI cnc_wropnlgnrl( unsigned short, IODBGNRL * ) ;
FWLIBAPI short WINAPI cnc_rdopnlgsname( unsigned short, short, IODBRDNA * ) ;
FWLIBAPI short WINAPI cnc_wropnlgsname( unsigned short, IODBRDNA * ) ;
FWLIBAPI short WINAPI cnc_getdtailerr( unsigned short, ODBERR * ) ;
FWLIBAPI short WINAPI cnc_rddiaginfo( unsigned short, short, unsigned short, ODBDIAGIF * ) ;
FWLIBAPI short WINAPI cnc_rddiagnum( unsigned short, ODBDIAGNUM * ) ;
FWLIBAPI short WINAPI cnc_gettimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI cnc_settimer( unsigned short, IODBTIMER * ) ;
FWLIBAPI short WINAPI cnc_rdtimer( unsigned short, short, IODBTIME * ) ;
FWLIBAPI short WINAPI cnc_wrtimer( unsigned short, short, IODBTIME * ) ;
FWLIBAPI short WINAPI cnc_rdbrstrinfo( unsigned short, ODBBRS * ) ;
FWLIBAPI short WINAPI cnc_rdradofs( unsigned short, ODBROFS * ) ;
FWLIBAPI short WINAPI cnc_rdlenofs( unsigned short, ODBLOFS * ) ;
FWLIBAPI short WINAPI cnc_rdfixcycle( unsigned short, ODBFIX * ) ;
FWLIBAPI short WINAPI cnc_rdcdrotate( unsigned short, ODBROT * ) ;
FWLIBAPI short WINAPI cnc_rd3dcdcnv( unsigned short, ODB3DCD * ) ;
FWLIBAPI short WINAPI cnc_rdmirimage( unsigned short, ODBMIR * ) ;
FWLIBAPI short WINAPI cnc_rdscaling( unsigned short, ODBSCL * ) ;
FWLIBAPI short WINAPI cnc_rd3dtofs( unsigned short, ODB3DTO * ) ;
FWLIBAPI short WINAPI cnc_rdposofs( unsigned short, ODBPOFS * ) ;
FWLIBAPI short WINAPI cnc_srcsrdidinfo( unsigned short, long, short, short, IODBIDINF * );
FWLIBAPI short WINAPI cnc_srcswridinfo( unsigned short, IODBIDINF * );
FWLIBAPI short WINAPI cnc_srcsrdexstat( unsigned short, ODBSRCSST * );
FWLIBAPI short WINAPI cnc_srcsrdlayout( unsigned short, ODBSRCSLYT * );
FWLIBAPI short WINAPI pmc_rdpmcrng( unsigned short, short, short, unsigned short, unsigned short, unsigned short, IODBPMC * ) ;
FWLIBAPI short WINAPI pmc_rdpmcrng( unsigned short, short, short, short, short, short, IODBPMC *);
FWLIBAPI short WINAPI pmc_wrpmcrng( unsigned short, unsigned short, IODBPMC * ) ;
FWLIBAPI short WINAPI pmc_wrpmcrng( unsigned short, short, IODBPMC *);
FWLIBAPI short WINAPI pmc_rdpmcinfo( unsigned short, short, ODBPMCINF * ) ;
FWLIBAPI short WINAPI pmc_rdcntldata( unsigned short, short, short, short, IODBPMCCNTL * ) ;
FWLIBAPI short WINAPI pmc_wrcntldata( unsigned short, short, IODBPMCCNTL * ) ;
FWLIBAPI short WINAPI pmc_rdalmmsg( unsigned short, short, short *, short *, ODBPMCALM * ) ;
FWLIBAPI short WINAPI pmc_getdtailerr( unsigned short, ODBPMCERR * ) ;
FWLIBAPI short WINAPI cnc_rdnodenum( long * );
FWLIBAPI short WINAPI cnc_allclibhndl2( long, unsigned short * );